src/app/globals.css
/* ... */
.react-datepicker__month .react-datepicker__month-text,
.react-datepicker__month .react-datepicker__quarter-text {
  width: auto;
  padding: 0.25rem 0.85rem;
}

.react-datepicker__month-read-view,
.react-datepicker__year-read-view {
  font-weight: bold;
  margin-bottom: 10px;
}
.react-datepicker__time-list-item,
.react-datepicker__day,
.react-datepicker__month-text,
.react-datepicker__year-text {
  border: 1.5px solid transparent;
  border-radius: 0.3rem;
  color: black;
}
.react-datepicker__time-list-item:not([aria-disabled="true"]):hover,
.react-datepicker__day:not([aria-disabled="true"]):hover,
.react-datepicker__month-text:not([aria-disabled="true"]):hover,
.react-datepicker__quarter-text:not([aria-disabled="true"]):hover,
.react-datepicker__year-text:not([aria-disabled="true"]):hover {
  background-color: rgba(244, 169, 246, 0.527) !important;
}
.react-datepicker__day--keyboard-selected,
.react-datepicker__month-text--keyboard-selected,
.react-datepicker__year-text--keyboard-selected {
  background-color: transparent;
  border-color: rgba(0, 0, 0, 0.25);
}

.react-datepicker__time-list-item--selected.react-datepicker__time-list-item,
.react-datepicker__day--selected,
.react-datepicker__month-text--selected,
.react-datepicker__year-text--selected {
  background-color: rgb(248, 241, 107) !important;
  border-color: black;
  color: black !important;
}

.react-datepicker__quarter-wrapper div:nth-child(1)::after {
  content: "Spring";
}
.react-datepicker__quarter-wrapper div:nth-child(2)::after {
  content: "Summer";
}
.react-datepicker__quarter-wrapper div:nth-child(3)::after {
  content: "Fall";
}
.react-datepicker__quarter-wrapper div:nth-child(4)::after {
  content: "Winter";
}
.react-datepicker__quarter-wrapper div::after {
  display: block;
  font-weight: 500;
  font-size: 14px;
  text-align: center;
  content: attr(data-season);
}

.react-datepicker__quarter-wrapper div {
  font-size: 0 !important; /* hide original Q1 text */
}

.react-datepicker__day-name,
.react-datepicker__day,
.react-datepicker__time-name {
  display: inline-block;
  width: 1.7rem;
  line-height: unset;
  text-align: center;
  margin: 0.166rem;
  &:hover {
    cursor: pointer;
  }
}
/* #region ------------- Phone Input -------------- */

.PhoneInputInput {
  @media (width < 768px) {
    width: 100%;
  }
  &:focus {
    outline: none;
    border: none;
  }
}

.PhoneInputCountry {
  & > select {
    &:disabled {
      opacity: 50%;
      filter: grayscale(1);
      color: white;
      cursor: not-allowed;
    }
  }
  &:has(select:disabled) {
    & * img {
      filter: grayscale(1);
    }
  }
}

.PhoneInputCountryIcon--border {
  box-shadow: none;
}
/* #endregion */
/* #region ------------- Rich Text -------------- */
.ProseMirror {
  @apply scrollable justy mini;
}
/* .rich-modal-cont {
  max-width: 90vw;
} */
.rich-text {
  &.rich-modal {
    @media (max-width: 768px) {
      max-width: 85vw;
    }
    display: flex;
    & .ProseMirror {
      padding: 1em 2em 2em;
    }
  }
  & * a {
    font-weight: 600;
    text-decoration: underline;
  }
  & ul,
  ol {
    &:not([data-type="taskList"]) {
      margin-left: 1.25em;
      padding-left: 1.25em;
    }
    /* // reverts to pre-tailwind preflight */
    list-style: revert;
    /* margin-left: 1.25em;
    padding-left: 1.25em; */
    list-style-position: outside;
  }
  & > ul:not([data-type="taskList"]) {
    list-style-type: disc;
  }
  & * ul:is([data-type="taskList"]) {
    list-style-type: none;
    display: flex;
    flex-direction: column;

    & > li {
      display: flex;
      column-gap: 0.25rem;
    }
    & * input[type="checkbox"] {
      appearance: auto;
      transform: translateY(0.1rem);
    }
  }
  & ol {
    list-style-type: decimal;
  }
  & ul li,
  ol li {
    margin-bottom: 0.25rem;
  }
  .rich-check {
    transform: translateY(0.125rem);
  }
  & * li[data-type="taskItem"] {
    &:first-of-type {
      margin-top: 0.25rem;
    }
  }

  & ul ul {
    list-style-type: circle;
  }

  & ul ul ul {
    list-style-type: square;
  }

  & ol ol {
    list-style-type: lower-alpha;
  }

  & ol ol ol {
    list-style-type: lower-roman;
  }
}

.rich-text__preview-wrapper {
  & p {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 95%;
  }
}

/* required for @tiptap/extension-placeholder to work */
/* Placeholder support for Tiptap */
.ProseMirror {
  /* min-height: 100px; */
  padding: 0.5rem;
  cursor: text;
  outline: none;
  white-space: pre-wrap;
  word-wrap: break-word;
  word-break: break-word;
  -webkit-font-variant-ligatures: none;
  font-variant-ligatures: none;
  font-feature-settings: "liga" 0;
}

.tiptap p.is-editor-empty:first-child::before {
  color: #adb5bd;
  content: attr(data-placeholder);
  float: left;
  height: 0;
  pointer-events: none;
}

.editor-wrapper {
  display: flex;
  flex-direction: column;
  height: 100%; /* or a defined max height */
  border: 1px solid #ccc;
  padding: 0.5rem;
}

.ProseMirror {
  flex: 1;
  min-height: 100px; /* still needed for empty state */
  max-height: 300px; /* optional */
  overflow-y: auto;
}
/* #endregion */

/*global.css
.rich-text ul[data-type="taskList"] {
  @apply list-none pl-6;
}

.rich-text li[data-type="taskItem"] {
  @apply relative mb-2 pl-7;
}
*/

/* -------------- Event/Org link component -------------- */

.links-hidden {
  @media (max-width: 640px) {
    transform: translateY(-100%);
    opacity: 0;
    height: 0;
  }
}

/* #region ---------- FilePond -------------- */
.filepond--credits {
  display: none;
}
.filepond--wrapper {
  border: 1px solid hsl(var(--foreground));
  overflow: hidden;
  border-radius: 0.3em;
  & .filepond--root {
    margin-bottom: 0 !important;
  }
  & .filepond--panel-root {
    background-color: transparent;
  }
  &:has(div[data-disabled]) {
    border-color: hsl(var(--foreground) / 0.3);
  }
}

.filepond--drop-label {
  /* background-color: hsl(var(--card)); */
  @apply bg-card;
}
/* ... */

